--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta http-equiv="pragma" content="no-cache" />
 </head>
 <body style="overflow: hidden; padding: 0; margin: 0;">
+
 	<!--
 <input type='file' accept='text/plain' onchange='openFile(event)'>
 -->
@@ -20,21 +21,91 @@
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
 <script>
+
+
+	function xhrGet(reqUri,callback) {
+		var xhr = new XMLHttpRequest();
+
+		xhr.open("GET", reqUri, true);
+		xhr.onload = callback;
+
+		xhr.send();
+	}
+
+
+
+var TILEDMapClass = Class.extend({
+
+    // Boolean flag we set once our map atlas
+    // has finished loading.
+    fullyLoaded: false,
+
+	//-----------------------------------------
+    // Load the json file at the url 'map' into
+    // memory. This is similar to the requests
+    // we've done in the past using
+    // XMLHttpRequests.
+    load: function (map) {
+
+        // Perform an XMLHttpRequest to grab the
+        // JSON file at url 'map'. We've provided
+        // the xhrGet function from the optional
+        // unit for you to use if you want.
+        //
+        // Once the XMLHttpRequest loads, set the
+        // 'fullyLoaded' flag to true.
+        //
+        xhrGet( "map.json", function(data) {
+			this.fullyLoaded = true;
+		});
+
+
+    }
+
+});
+
+// We define a single global instance of our
+// map for the rest of our game code to access.
+var gMap = new TILEDMapClass();
+gMap.load();
+
+
+
+
+
+
+/*
 	var canvas = null;
 	var ctx = null;
 	var gSpriteSheets = new SpriteSheetClass();
 	var atlasString = '';
-	var atlasJSON = $.getJSON("http://localhost/canvas/robots.json", function(result){
+	var atlasJSON = $.getJSON("http://localhost/canvas/robotsTrim.json", function(result){
         atlasString = JSON.stringify(result);
 		gSpriteSheets.parseAtlasDefinition(atlasString);
+		//console.log(gSpriteSheets);
+		//SETUP CANVAS
+		setup(600,200);
+
+		//DRAW TO CANVAS
+		drawSprite("trimRobot1.png", 0, 0);
+		//drawSprite("trimRobot2.png", 200, 0);
+		//drawSprite("trimRobot3.png", 400, 0);
+
     });
 
-	//SETUP CANVAS
-	//setup(200,200);
+	var setup = function(cw, ch) {
+	  body = document.body;
+	  canvas = document.createElement('canvas');
 
-	//DRAW TO CANVAS
-	//drawSprite("robowalk00.png", 0, 0);
+	  ctx = canvas.getContext('2d');
 
+	  canvas.width = cw;
+	  canvas.height = ch;
+
+	  body.appendChild(canvas);
+
+	};
+*/
 
 </script>
 <!--
