--- a/index.html
+++ b/index.html
@@ -14,64 +14,16 @@
 	<!--
 <input type='file' accept='text/plain' onchange='openFile(event)'>
 -->
+<script type="text/javascript" src="xhr.js"></script>
 <script type="text/javascript" src="core.js"></script>
 <script type="text/javascript" src="spritesheet.js"></script>
+<script type="text/javascript" src="TILEDMapClass.js"></script>
+
 <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
 <script>
-
-
-	function xhrGet(reqUri,callback) {
-		var xhr = new XMLHttpRequest();
-
-		xhr.open("GET", reqUri, true);
-		xhr.onload = callback;
-
-		xhr.send();
-	}
-
-
-
-var TILEDMapClass = Class.extend({
-
-    // Boolean flag we set once our map atlas
-    // has finished loading.
-    fullyLoaded: false,
-
-	//-----------------------------------------
-    // Load the json file at the url 'map' into
-    // memory. This is similar to the requests
-    // we've done in the past using
-    // XMLHttpRequests.
-    load: function (map) {
-
-        // Perform an XMLHttpRequest to grab the
-        // JSON file at url 'map'. We've provided
-        // the xhrGet function from the optional
-        // unit for you to use if you want.
-        //
-        // Once the XMLHttpRequest loads, set the
-        // 'fullyLoaded' flag to true.
-        //
-        xhrGet( "map.json", function(data) {
-			this.fullyLoaded = true;
-		});
-
-
-    }
-
-});
-
-// We define a single global instance of our
-// map for the rest of our game code to access.
-var gMap = new TILEDMapClass();
-gMap.load();
-
-
-
-
 
 
 /*
