--- a/input/index.html
+++ b/input/index.html
@@ -37,6 +37,7 @@ InputEngineClass = Class.extend({
 // TASK #1
 // Create a 256 element array to hold the keystates and name it 'keyState'.
 //
+	keyState: new Array(256),
 
 // TASK #2
 // Specify the event handler for the 'keyup' event in the 'setup' method.
@@ -50,6 +51,7 @@ InputEngineClass = Class.extend({
 		document.getElementById('my_canvas').addEventListener('mousemove', onMouseMove);
 		document.getElementById('my_canvas').addEventListener('keydown', onKeyDown);
 		// YOUR CODE HERE
+		document.getElementById('my_canvas').addEventListener('keyup', onKeyDown);
 	},
 
 	//-----------------------------
@@ -65,6 +67,7 @@ InputEngineClass = Class.extend({
 		// then set the equivalent element in the keyState array
 		// to true.
         //
+        this.keyState[event.which] == true;
 
 	},
 
@@ -75,6 +78,7 @@ InputEngineClass = Class.extend({
 		// then set the equivalent element in the keyState array
 		// to false.
 		//
+		this.keyState[event.which] == false;
 
 	},
 
